função adicionar aluno put
